# twitch-stream-notification-backend

./: .gitignore  .replit  README.md  error.py  help.py  index.py  main.py  notify.py  pyproject.toml  start.sh
.github/workflows/: release-drafter.yml
cogs/: error.py  notify.py
database/: create_db.py  database.db  insert.py  manage_db.py
utils/: fetcher.py  sender.py
views/: discord_view.py
