[tool.poetry]
name = "twitch-stream-notification-backend"
version = "0.1.0"
description = "discord.py v2.0"
authors = ["Replit user <<>>"]
license = "MIT"
readme = "README.md"
# ↓poetryの並行起動時にエラーが出るのでコメントアウト
# packages = [{include = "twitch_stream_notification_backend"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12"
discord = "^2.3.2"
discord-py = "^2.3.2"
flask = "^3.0.2"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
